@@ -1,4 +1,5 @@
 2016-09-10 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * added acceptance tests to test package_settings
   * fixed typo in Vagrantfile
 2016-06-24 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
   * minor revision to README.md
